# agentic-ds-team

./: .gitignore  .gitlab-ci.yml  .terraform.lock.hcl  LICENSE  README.md  bedrock_agentic_ds_team.tf  experiment_app.py  gcp_agentic_ds_team.tf  main.py  outputs.tf  pyproject.toml  requirements.txt  s3_bucket.tf  serverless.yml
.github/workflows/: ci-cd.yml
data_science/: tools.py
modules/bedrock_agentic_ds_team/: README.md  main.tf  outputs.tf  s3_parquet_data_agent.tf  sagemaker.tf  variables.tf
modules/gcp_agentic_ds_team/: README.md  agentic_infra.tf  gcs_parquet_data_agent.tf  outputs.tf  variables.tf  vertex_ai.tf
scripts/: __init__.py  bedrock_agentic_ds_team_architecture.py  data.sh  download_and_prepare_data.sh
tests/: test_experiment_app.py
