[tool.pytest.ini_options]
console_output_style = "progress"
addopts = "-vv -s"
testpaths = ["tests/"]
log_level = "DEBUG"
log_cli = true
log_auto_indent = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "[%(asctime)s] %(levelname)s (%(funcName)s) \t [%(pathname)s:%(lineno)d] %(message)s"
filterwarnings = [
    #"error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    #'ignore:function ham\(\) is deprecated:DeprecationWarning',
]

[project]
authors = [
    {name = "Meltem Subasioglu", email = "msubasioglu@google.com"},
]
license = {text = "Apache License 2.0"}
requires-python = "<4.0,>=3.12"
dependencies = [
    "python-dotenv<2.0.0,>=1.0.1",
    "google-adk<2.0.0,>=1.0.0",
    "immutabledict<5.0.0,>=4.2.1",
    "sqlglot<27.0.0,>=26.10.1",
    "db-dtypes<2.0.0,>=1.4.2",
    "regex<2025.0.0,>=2024.11.6",
    "tabulate<1.0.0,>=0.9.0",
    "google-cloud-aiplatform[adk,agent-engines]<2.0.0,>=1.93.0",
    "absl-py<3.0.0,>=2.2.2",
    "pydantic<3.0.0,>=2.11.3",
    "opik>=1.8.6",
]
name = "data-science"
version = "0.1"
description = "Data Science and Data QnA Multi-Agent"
readme = "README.md"

[dependency-groups]
dev = [
    "google-cloud-aiplatform[adk,agent-engines,evaluation]<2.0.0,>=1.93.0",
    "pytest<9.0.0,>=8.3.5",
    "pytest-asyncio<1.0.0,>=0.26.0",
]

[tool.uv]
default-groups = []
